kubernetes/apps/default/error-pages/app-external/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: errors-whoverse-nexus
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - errors.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: error-pages-external
          port: 8080
